touched a bit setup.py & friends for file locations during install

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-include cacert.pem hook-updater4pyi.py
-recursive-include installers *.sh *.zip *.txt *.cxx *.h
+include updater4pyi/cacert.pem hook-updater4pyi.py
+recursive-include updater4pyi/installers *.sh *.zip *.txt *.cxx *.h
