added missing files in source dist

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
+include README.md LICENSE.txt
 include updater4pyi/cacert.pem hook-updater4pyi.py
 recursive-include updater4pyi/installers *.sh *.zip *.txt *.cxx *.h
